{
  "version": 4,
  "terraform_version": "1.13.0",
  "serial": 89,
  "lineage": "9e7f5c1a-2c58-46e2-4590-394ea9d85171",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ae2c887094315bed",
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:instance/i-009f980b21723d546",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-profile-335507813633-my-eks-shop-cluster",
            "id": "i-009f980b21723d546",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "LetMeIn",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07235200cee0c4a99",
            "private_dns": "ip-10-10-1-67.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.67",
            "public_dns": "ec2-43-203-124-171.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.124.171",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0026816da9b612c84",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc3462a545a1041d",
            "tags": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0318c9622551931af",
              "sg-0833ba59249d9714e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_security_group.bastion",
            "data.aws_ami.bastion",
            "data.aws_caller_identity.current",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.pod_identity_agent",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.nodes",
            "module.eks.aws_eks_pod_identity_association.shopping_mall",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role.eks_node",
            "module.eks.aws_iam_role.shopping_mall_role",
            "module.eks.aws_iam_role_policy.shopping_mall_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_policies",
            "module.eks.aws_iam_role_policy_attachment.node_policies",
            "module.eks.aws_iam_role_policy_attachment.shopping_mall_ecr_policy",
            "module.eks.kubernetes_namespace.shop",
            "module.eks.kubernetes_service_account.shopping_mall",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-0833ba59249d9714e",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0833ba59249d9714e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from allowed CIDRs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-eks-shop-cluster-bastion-20250909005953433300000004",
            "name_prefix": "my-eks-shop-cluster-bastion-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-068d7b3dd93d9c2a6",
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:instance/i-03e7ff430137cc436",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bastion-profile-335507813633-my-eks-shop-cluster",
            "id": "i-03e7ff430137cc436",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "LetMeIn",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-083e52fc18ddbbfcb",
            "private_dns": "ip-10-10-1-253.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.253",
            "public_dns": "ec2-3-39-224-158.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.39.224.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0480560b7c150211d",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc3462a545a1041d",
            "tags": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0318c9622551931af",
              "sg-0c2ad7e58e7ac58a9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.bastion.aws_iam_instance_profile.bastion",
            "module.bastion.aws_iam_role.bastion",
            "module.bastion.aws_security_group.bastion",
            "module.bastion.data.aws_ami.bastion",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.pod_identity_agent",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.nodes",
            "module.eks.aws_eks_pod_identity_association.shopping_mall",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role.eks_node",
            "module.eks.aws_iam_role.shopping_mall_role",
            "module.eks.aws_iam_role_policy.shopping_mall_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_policies",
            "module.eks.aws_iam_role_policy_attachment.node_policies",
            "module.eks.aws_iam_role_policy_attachment.shopping_mall_ecr_policy",
            "module.eks.kubernetes_namespace.shop",
            "module.eks.kubernetes_service_account.shopping_mall",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-0c2ad7e58e7ac58a9",
            "description": "Security group for bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2ad7e58e7ac58a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from allowed CIDRs",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-eks-shop-cluster-bastion-20250909005953432800000003",
            "name_prefix": "my-eks-shop-cluster-bastion-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.pod_identity_agent",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.nodes",
            "module.eks.aws_eks_pod_identity_association.shopping_mall",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role.eks_node",
            "module.eks.aws_iam_role.shopping_mall_role",
            "module.eks.aws_iam_role_policy.shopping_mall_policy",
            "module.eks.aws_iam_role_policy_attachment.cluster_policies",
            "module.eks.aws_iam_role_policy_attachment.node_policies",
            "module.eks.aws_iam_role_policy_attachment.shopping_mall_ecr_policy",
            "module.eks.kubernetes_namespace.shop",
            "module.eks.kubernetes_service_account.shopping_mall",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "shop",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "shop",
            "metadata": [
              {
                "generation": 0,
                "name": "shop",
                "resource_version": "2168",
                "uid": "ad62a42c-be31-4e1d-93c8-83810ef411da"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "shop"
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.eks.aws_eks_addon.coredns",
            "module.eks.aws_eks_addon.kube_proxy",
            "module.eks.aws_eks_addon.pod_identity_agent",
            "module.eks.aws_eks_addon.vpc_cni",
            "module.eks.aws_eks_cluster.eks",
            "module.eks.aws_eks_node_group.nodes",
            "module.eks.aws_iam_role.eks_cluster",
            "module.eks.aws_iam_role.eks_node",
            "module.eks.aws_iam_role_policy_attachment.cluster_policies",
            "module.eks.aws_iam_role_policy_attachment.node_policies",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-038e19791877a2518",
            "description": "Security group for MySQL RDS instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038e19791877a2518",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow MySQL access from within the VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "my-eks-shop-cluster-db-20250909005953433300000005",
            "name_prefix": "my-eks-shop-cluster-db-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-db"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:security-group/sg-08dd492efd4d3130a",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dd492efd4d3130a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow Redis access from within the VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "my-eks-shop-cluster-redis-20250909005953433800000006",
            "name_prefix": "my-eks-shop-cluster-redis-",
            "owner_id": "335507813633",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-eks-shop-cluster-redis"
            },
            "tags_all": {
              "Name": "my-eks-shop-cluster-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1db75f28753c751",
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:elastic-ip/eipalloc-0f1db75f28753c751",
            "association_id": "eipassoc-053cea152be258af9",
            "domain": "vpc",
            "id": "eipalloc-0f1db75f28753c751",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-02f8cdd7dea75b10c",
            "private_dns": "ip-10-10-1-105.ap-northeast-2.compute.internal",
            "private_ip": "10.10.1.105",
            "public_dns": "ec2-43-200-152-153.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.152.153",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "NAT-EIP"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "NAT-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:internet-gateway/igw-0e5181c15c62846dd",
            "id": "igw-0e5181c15c62846dd",
            "owner_id": "335507813633",
            "tags": {
              "Environment": "dev",
              "Name": "MyVPC-IGW"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MyVPC-IGW"
            },
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1db75f28753c751",
            "association_id": "eipassoc-053cea152be258af9",
            "connectivity_type": "public",
            "id": "nat-073ea2b1671d2581e",
            "network_interface_id": "eni-02f8cdd7dea75b10c",
            "private_ip": "10.10.1.105",
            "public_ip": "43.200.152.153",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fc3462a545a1041d",
            "tags": {
              "Environment": "dev",
              "Name": "NAT-GW"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "NAT-GW"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:route-table/rtb-0cc039baa7fd7cb2a",
            "id": "rtb-0cc039baa7fd7cb2a",
            "owner_id": "335507813633",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-073ea2b1671d2581e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Private-RT"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:route-table/rtb-095273ac8a96176ac",
            "id": "rtb-095273ac8a96176ac",
            "owner_id": "335507813633",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5181c15c62846dd",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "Public-RT"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00aebced3ead895c5",
            "route_table_id": "rtb-0cc039baa7fd7cb2a",
            "subnet_id": "subnet-0baacecc2ecd21547"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private1",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cae7777f4c26d464",
            "route_table_id": "rtb-0cc039baa7fd7cb2a",
            "subnet_id": "subnet-0b539bfe5869b67f8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private2",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-066bd064f99d2da3b",
            "route_table_id": "rtb-095273ac8a96176ac",
            "subnet_id": "subnet-0fc3462a545a1041d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09325d97ceeba47cf",
            "route_table_id": "rtb-095273ac8a96176ac",
            "subnet_id": "subnet-0ebd02cda259e72d5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public2",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-0baacecc2ecd21547",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0baacecc2ecd21547",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private-Subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private-Subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-0b539bfe5869b67f8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b539bfe5869b67f8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Private-Subnet-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Private-Subnet-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-0fc3462a545a1041d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc3462a545a1041d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public-Subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public-Subnet-1",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:subnet/subnet-0ebd02cda259e72d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebd02cda259e72d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "335507813633",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "Public-Subnet-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "Public-Subnet-2",
              "kubernetes.io/cluster/eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0f01002dc010c4797"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:335507813633:vpc/vpc-0f01002dc010c4797",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f3c73a7d36f434a5",
            "default_route_table_id": "rtb-03f60b68e0738d2f2",
            "default_security_group_id": "sg-003589719d2e0d213",
            "dhcp_options_id": "dopt-0ae639c5a77d7901b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f01002dc010c4797",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03f60b68e0738d2f2",
            "owner_id": "335507813633",
            "tags": {
              "Environment": "dev",
              "Name": "MyVPC"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "MyVPC"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}